@@ -1,3 +1,8 @@
+2005-11-17  Laurent GUERBY  <laurent@guerby.net>
+
+	PR ada/24857
+	* s-auxdec-empty.ads, s-auxdec-empty.adb: New files.
+	
 2005-11-16  Richard Guenther  <rguenther@suse.de>
 
 	* Makefile.in: Add EH_MECHANISM=-gcc to s390(x) linux.
